frontend/ansible_workflow_frontend/style.css
Screen {
    background: $background;
    color: $text;
    layout: vertical;
}

#workflow_tree {
    width: 30;
    height: 100%;
    background: $surface;
    border-right: solid $primary;
    hatch: right $foreground 10%;
    padding: 1;
}

#node_details {
    height: 30%;
    background: $surface;
    hatch: right $foreground 10%;
    padding: 0;
    /*border-bottom: solid $primary;*/
}

#playbook_stdout {
    background: $surface-darken-1;
    height: 70%;
    padding: 1;
}

#action_buttons {
    display: none;
    padding: 0;
    width: 100%;
    align-horizontal: right;
}

#action_buttons Button {
    width: auto;
    height: auto;
    margin-left: 2;
}

Button {
    /* background: $primary;
    color: $text-primary; */
    border: none;
    min-width: 15;
}

Header {
    background: $primary-darken-1;
    color: $text-primary;
    text-style: bold;
}

Footer {
    background: $primary-darken-1;
    color: $text-primary;
}

Tree {
    padding: 1;
}

DataTable {
    padding: 1;
}

RichLog {
    padding: 1;
}

Rule {
    color: $primary;
}

